# issue-from-pytest-log-action

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  action.yaml  capture_versions.py  format_issue_body.py  generate_bisect_comparison.py  parse_logs.py  pyproject.toml  simple_bisect.py  store_bisect_data.py  test_format_issue_body.py  test_parse_log.py  test_track_packages.py  track_packages.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  test.yml
src/issue_from_pytest_log_action/: __init__.py  capture_versions.py  extract_run_metadata.py  parse_logs.py  simple_bisect.py  track_packages.py
tests/: test_end_to_end.py  test_extract_run_metadata.py  test_nightly_wheels.py  test_parse_logs.py  test_scientific_packages.py  test_simple_bisect.py  test_track_packages.py  test_version_extraction.py  test_version_string_parsing.py
